@@ -80,7 +80,7 @@ protected:
 	Component(const string& className, const string& visibleClassName);
 
 public:
-	virtual ~Component() = 0;
+	virtual ~Component() { }
 
 	/**
 	 * \brief Gets the class name of the component.
@@ -559,7 +559,8 @@ protected:
 		if (it != m_stateVariables.end())
 			return false;
 
-		m_stateVariables[name] = StateVariable(name, variablePointer);
+		m_stateVariables.insert(pair<string,StateVariable>
+		    (name, StateVariable(name, variablePointer)));
 		return true;
 	}
 
@@ -581,7 +582,8 @@ protected:
 		if (it != m_stateVariables.end())
 			return false;
 
-		m_stateVariables[name] = StateVariable(name, variableHandler);
+		m_stateVariables.insert(pair<string,StateVariable>
+		    (name, StateVariable(name, variableHandler)));
 		return true;
 	}
 
